Fix overflow card bug

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -16,6 +16,7 @@ body {
   color: var(--text);
   background: var(--background);
   margin: 0;
+  overflow: hidden;
   height: 100%;
   width: 100%;
 }
